--- a/app/src/main/resources/templates/admin/adminEventList.html
+++ b/app/src/main/resources/templates/admin/adminEventList.html
@@ -51,10 +51,10 @@
   <!-- Page content wrapper-->
   <div id="page-content-wrapper">
     <div class="container-fluid">
-      <h2 class="mt-4">파티게시물 관리</h2>
+      <h2 class="mt-4">이벤트게시물 관리</h2>
 
       <!--  테이블 부트스트랩   -->
-      <form action="partyBlocks" method="post">
+      <form action="eventBlocks" method="post">
       <table class="table table-hover">
         <thead>
         <tr>
@@ -62,18 +62,20 @@
           <th scope="col">제목</th>
           <th scope="col">닉네임</th>
           <th scope="col">작성일</th>
+          <!-- <th scope="col">조회수</th> -->
         </tr>
         </thead>
         <tbody class="table-group-divider" id="checkedBlock">
-        <tr th:each="adminPartyList : ${adminPartyLists}">
-          <th scope="row"><input type="checkbox" name="selectBlock" th:value="${adminPartyList.no}" th:text="${adminPartyList.no}"></th>
-          <td><a href="" th:href="@{/admin/adminPartyListDetail(no=${adminPartyList.no})}" th:text="${adminPartyList.title}"></a></td>
-          <td th:text="${adminPartyList.writer.nick}"></td>
-          <td th:text="${adminPartyList.createDate}"></td>
+        <tr th:each="adminEventList : ${adminEventLists}">
+          <th scope="row"><input type="checkbox" name="selectBlock" th:value="${adminEventList.no}" th:text="${adminEventList.no}"></th>
+          <td><a href="" th:href="@{/admin/adminEventListDetail(no=${adminEventList.no})}" th:text="${adminEventList.title}"></a></td>
+          <td th:text="${adminEventList.writer.nick}"></td>
+          <td th:text="${adminEventList.createDate}"></td>
+         <!--  <td th:text="${adminEventList.viewCnt}"></td> -->
         </tr>
         </tbody>
       </table>
-        <button type="button" value="비활성화" onclick="partyBlock()">비활성화</button>
+        <button type="button" value="비활성화" onclick="eventBlock()">비활성화</button>
       </form>
 
       <!--  테이블 부트스트랩 end   -->
@@ -87,17 +89,17 @@
   <ul class="pagination justify-content-center">
     <li class="page-item disabled" th:if="${pageMaker.prev}">
       <a class="page-link"
-         th:href="@{adminPartyList(pageMaker.startPage-1)}" aria-label="Previous">
+         th:href="@{adminEventList(pageMaker.startPage-1)}" aria-label="Previous">
         <span aria-hidden="true">이전페이지</span>
       </a>
     </li>
     <th:block th:each="pageNum: ${#numbers.sequence(pageMaker.startPage, pageMaker.endPage)}">
       <li class="page-item">
-        <a class="page-link" th:href="@{adminPartyList(page=${pageNum})}"><i th:text="${pageNum}"></i></a>
+        <a class="page-link" th:href="@{adminEventList(page=${pageNum})}"><i th:text="${pageNum}"></i></a>
       </li>
     </th:block>
     <li class="page-item" th:if="${pageMaker.next && pageMaker.endPage >0}">
-      <a class="page-link" th:href="@{adminPartyList(page=${pageMaker.endPage+1})}" aria-label="Next">
+      <a class="page-link" th:href="@{adminEventList(page=${pageMaker.endPage+1})}" aria-label="Next">
         <span aria-hidden="true">다음페이지</span>
       </a>
     </li>
@@ -117,12 +119,12 @@
 <script src="/js/notice/notice.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-<!-- 파티게시물 체크박스 비활성화 -->
+<!-- 이벤트게시물 체크박스 비활성화 -->
 <script>
 let checkedValue = [];
 
-// 비활성화 버튼 클릭시 partyBlock() 함수 실행
-function partyBlock(){
+// 비활성화 버튼 클릭시 eventBlock() 함수 실행
+function eventBlock(){
     // $("#checkedBlock").find('input:checked') 체크박스의 checked 된 태그를 찾는다
 	  $("#checkedBlock").find('input:checked').each(function(index){
 	    // this = index (선택 된 태그)
@@ -133,17 +135,17 @@ function partyBlock(){
 		});
 	  
 	  console.log(checkedValue);
-	  partyBlockAjax();
+	  eventBlockAjax();
 }
 
-function partyBlockAjax() {
+function eventBlockAjax() {
 	$.ajax({
 	 type: "POST",
-	 url: "/admin/partyBlocks",
+	 url: "/admin/eventBlocks",
 	 data: {"checkedValue": checkedValue},
 	 success: function(result) {
 		 console.log(result);
-		 window.location.href="/admin/adminPartyList"
+		 window.location.href="/admin/adminEventList"
 	 }
 	})
 }
