--- a/app/src/main/resources/templates/event/eventList.html
+++ b/app/src/main/resources/templates/event/eventList.html
@@ -27,13 +27,68 @@
 <!-------------------------------구분선-------------------------->
 <div class="b-example-divider"></div>
 <!-------------------------------구분선-------------------------->
-<div th:replace="/common/header.html :: fragment-header"></div>
+<header class="p-3 mb-3 bg-white border-bottom fixed-top">
+    <div class="container">
+        <div
+                class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a class="navbar-brand" th:href="@{/}">
+                <img src="/images/logo.png" alt="Bootstrap" width="100" height="88">
+            </a>
+            <!-------------------------------구분선-------------------------->
+            <div class="col-2"></div>
+
+            <form class="col-12 col-lg-4 mb-3 mb-lg-0 me-lg-4" role="search">
+                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+            </form>
+
+            <!-------------------------------구분선-------------------------->
+            <div class="col-2"></div>
+
+            <div th:if="${session.loginMember == null}" class="d-grid me-lg-4 gap-2">
+                <button type="button" onclick="location.href='/auth/login'" class="btn btn-secondary"
+                        data-bs-toggle="button">로그인
+                </button>
+            </div>
+
+            <div th:if="${session.loginMember != null}" class="d-grid me-lg-4 gap-2">
+                <button type="button" onclick="location.href='/auth/logout'" class="btn btn-secondary"
+                        data-bs-toggle="button">로그아웃
+                </button>
+            </div>
+
+            <div class="dropdown text-end me-lg-4">
+                <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle"
+                   data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="/images/mypage.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                </a>
+
+                <ul class="dropdown-menu text-small ">
+                  <li th:if="${session.loginMember != null}"><a class="dropdown-item" href="#">New project...</a></li>
+                  <li th:if="${session.loginMember != null}"><a class="dropdown-item" th:href="@{/my/main}">마이페이지</a></li>
+                  <li th:if="${session.loginMember != null}"><a class="dropdown-item" href="#">설정</a></li>
+                  <li th:if="${session.loginMember != null}"><a class="dropdown-item" href="#">프로필</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li th:if="${session.loginMember == null}"><a class="dropdown-item"
+                                                                  th:href="@{/register/add}">회원가입</a></li>
+                    <li th:if="${session.loginMember == null}"><a class="dropdown-item"
+                                                                  th:href="@{/auth/login}">로그인</a></li>
+                    <!--          </li>-->
+                    <li th:if="${session.loginMember != null}"><a class="dropdown-item"
+                                                                  th:href="@{/auth/logout}">로그아웃</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
 <!-------------------------------구분선-------------------------->
 <div class="line-3"></div>
 <div class="line-3"></div>
 <!------------------------------nav------------------------------>
 <div th:replace="/common/nav.html :: fragment-nav"></div>
 <!-------------------------------구분선-------------------------->
+
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -123,7 +178,7 @@
                             <div class="card-body">
                 
                               <div class="d-grid gap-2">
-                                <button class="btn btn-primary" href="#" onclick="" type="button">파티 참가하기</button>
+                                <button class="btn btn-primary" th:href="@{/event/orderform}" onclick="location.href='/event/orderform'" type="button">파티 참가하기</button>
                               </div>
                             </div>
                           </div>
@@ -184,37 +239,26 @@
                 crossorigin="anonymous"></script>
         <!-- jquery end-->
 
-<script type='text/javascript'>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var calendarEl = document.getElementById('calendar');
 
-    document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
+                var calendar = new FullCalendar.Calendar(calendarEl, {
+                    googleCalendarApiKey: 'AIzaSyAVU1OirVfiY7F9dDmdEWeVX_rbgpJ3hnY',
+                    eventSources: [
+                        {
+                            googleCalendarId: '69605dd085c4c9b48b6c840bb86fbe59e11b8b60ee2c969de3f14126ed90198b@group.calendar.google.com',
+                            className: '이벤트달력',
+                            color: '#be5683', //rgb,#ffffff 등의 형식으로 할 수 있어요.
+                            //textColor: 'black'
+                        },
+                    ]
+                });
+                calendar.render();
+            });
 
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-            googleCalendarApiKey: 'AIzaSyAVU1OirVfiY7F9dDmdEWeVX_rbgpJ3hnY',
-            eventSources: [
-                {
-                    googleCalendarId: '69605dd085c4c9b48b6c840bb86fbe59e11b8b60ee2c969de3f14126ed90198b@group.calendar.google.com',
-                    className: '이벤트달력',
-                    color: '#be5683', //rgb,#ffffff 등의 형식으로 할 수 있어요.
-                    //textColor: 'black'
-                },
-                {
-                    googleCalendarId: '여기에 구글 캘린더 ID를 붙여넣기하시면 됩니다.',
-                    className: '정보처리기능사',
-                    color: '#204051',
-                    //textColor: 'black'
-                },
-                {
-                    googleCalendarId: '여기에 구글 캘린더 ID를 붙여넣기하시면 됩니다.',
-                    className: '정보처리기사',
-                    color: '#3b6978',
-                    //textColor: 'black'
-                }
-            ]
-        });
-        calendar.render();
-    });
-</script>
+        </script>
+
 
 
 </body>
