--- a/app/src/main/resources/templates/admin/adminPartyListDetail.html
+++ b/app/src/main/resources/templates/admin/adminPartyListDetail.html
@@ -14,9 +14,20 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
   <link href="/css/notice/style.css" rel="stylesheet"> <!-- TODO 추가 - 2 같지만 수정 -->
+  
+   <!-- Core theme CSS (includes Bootstrap)--> <!-- TODO 추가 - 1 -->
+   <link href="/css/notice/noticeStyles.css" rel="stylesheet"/>
 
-  <!-- Core theme CSS (includes Bootstrap)--> <!-- TODO 추가 - 1 -->
-  <link href="/css/notice/noticeStyles.css" rel="stylesheet"/>
+  <!-- 서머노트css -->
+  <!-- include libraries(jQuery, bootstrap) -->
+  <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+        rel="stylesheet"> -->
+
+  <!-- include summernote css/js -->
+  <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css"
+        rel="stylesheet">
+  <!-- 서머노트css end-->
+
 
 </head>
 <body>
@@ -50,7 +61,7 @@
   </div>
   <!-- Page content wrapper-->
   <!-- 상세보기 -->
-  <form th:action="@{/party/update}" method="post" enctype="multipart/form-data">
+  <form>
     <div class="container border rounded">
   
       <!--1줄-->
@@ -74,7 +85,7 @@
   
       <!--2줄-->
       <div class="row p-3">
-        <div class="col" ><input name='title' type='text'value='제목'th:value="${party.title}">
+        <div class="col"><input name='title' type='text'value='제목' th:value="${party.title}" size='93' readonly>
         </div>
       </div>
   
@@ -84,15 +95,15 @@
         </div>
         <div class="col-2" th:text=" '조회수:' + ${party.viewCnt}">
         </div>
-        <div class="col-2" th:text=" '작성일:' + ${party.createDate}">
+        <div class="col-6" th:text=" '작성일:' + ${party.createDate}">
         </div>
       
       </div>
       
       <!--4줄-->
-      <div class="row p-3 border-bottom">
+      <div class="row p-3 border-bottom" style="height: 300px;">
         <div class="col">
-          <textarea id='content' name='content' th:text="${party.content}"></textarea>
+          <textarea id='content' name='content' th:text="${party.content}" readonly></textarea>
         </div>
       </div>
       <!--5줄-->
@@ -118,10 +129,11 @@
       <div class="row p-3">
         <div class="col-2"><p th:text="'장소명 : ' +'[' + ${party.location} + ']'"></p>
         </div>
-        <div class="col-2" th:text="'주소 : ' +'[' + ${party.address} + ']'">
+        <div class="col-6" th:text="'주소 : ' +'[' + ${party.address} + ']'">
         </div>
       </div>
     </div>
+    <br>
     <button type="button" class="btn btn-outline-secondary"><a th:href="@{partyBlock(no=${party.no})}">비활성화</a></button>
     
   </form> 
@@ -129,7 +141,10 @@
 </div>
 
 
-<!-------------------------------구분선-------------------------->
+ <!-------------------------------구분선-------------------------->
+ <div class="c-example-divider"></div>
+ <!-------------------------------구분선-------------------------->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous">
@@ -138,6 +153,11 @@
 <!-- Core theme JS--> <!-- noticeList 왼쪽 사이드바 --> <!-- TODO 추가 - 6-->
 <script src="/js/notice/notice.js"></script>
 
+<!-- jquery -->
+<script src="https://code.jquery.com/jquery-3.6.1.js"
+integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+crossorigin="anonymous"></script>
+<!-- jquery end-->
 <!-- 서머노트 -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -151,14 +171,14 @@
 
     $('textarea[name=content]').summernote({
       toolbar:false,
-      height: 600,
-      width:1200,
+      height: 260,
+      width: 800,
       minHeight : null,
       maxHeight : null,
-      disableDragAndDrop: true
+      disableDragAndDrop: true,
+      lang: "ko-KR",
+      
     });
-
-    $('textarea[name=content]').summernote('disable');
   });
 </script>
 <!-- 서머노트 end-->
